# supervisorpp

./: .gitmodules  CMakeLists.txt  Config.hpp  Supervisor.cpp  Supervisor.hpp  SupervisorFacade.cpp  SupervisorFacade.hpp  config.example.json  main.cpp
certs/: dh768.pem  fullchain.pem  privkey.pem
cmake/modules/: Findkashmir.cmake
